infrastructure/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app.kubernetes.io/component: monitoring
    pod-security.kubernetes.io/enforce: privileged
